# ChangeLog for kde-base/kdelibs
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.651 2009/12/02 22:06:18 scarabeus Exp $

  02 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> kdelibs-4.3.4.ebuild:
  Fix elog information. Per bug #288502.

  02 Dec 2009; Jonathan Callen <abcd@gentoo.org> kdelibs-4.3.4.ebuild:
  khelpcenter is now optional again, force the dep when USE=handbook

*kdelibs-4.3.4 (01 Dec 2009)

  01 Dec 2009; Alex Alexander <wired@gentoo.org> +kdelibs-4.3.4.ebuild:
  Version bump

  30 Nov 2009; Joseph Jezak <josejx@gentoo.org> kdelibs-4.3.3-r1.ebuild:
  Marked ppc/ppc64 stable for bug #292455.

*kdelibs-4.3.3-r2 (29 Nov 2009)

  29 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  +kdelibs-4.3.3-r2.ebuild:
  Dummy revision bump for app-arch/xz-utils.

  29 Nov 2009; Raúl Porcel <armin76@gentoo.org> kdelibs-4.3.3-r1.ebuild:
  Add ~sparc

  29 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  kdelibs-4.3.3-r1.ebuild:
  amd64 stable wrt #292455

*kdelibs-4.3.3-r1 (28 Nov 2009)

  28 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -kdelibs-4.3.3.ebuild, +kdelibs-4.3.3-r1.ebuild,
  +files/kdelibs-4.3.3-plasma-pixmap-cache.patch:
  Revision bump. Apply the plasma-pixmap-cache fix.

  20 Nov 2009; Jonathan Callen <abcd@gentoo.org> kdelibs-3.5.10-r6.ebuild:
  Switch to EAPI=2 to add a USE dep

  11 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  kdelibs-3.5.10-r6.ebuild:
  Remove USE arts (deprecated).

  09 Nov 2009; Jonathan Callen <abcd@gentoo.org>
  -files/kdelibs-4.3.2-fix-deadlock-in-KLocale.patch,
  -files/kdelibs-4.3.2-fix-plasma-crash.patch,
  -files/dist/09_disable_debug_messages_if_not_explicitly_enabled.patch,
  -files/4.2.4-CVE-2009-1687.patch,
  -files/4.2.4-fixPopupForPlasmaboard.patch,
  -files/kdelibs-4.2-fixx11h.h.patch, -files/4.2.4-CVE-2009-1690.patch,
  -files/4.2.4-CVE-2009-1698.patch, -files/4.2.4-CVE-2009-1725.patch:
  Drop unneeded patches
