@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/Attic/kdelibs-4.3.3-r1.ebuild,v 1.4 2009/11/30 05:01:47 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/Attic/kdelibs-4.3.3-r1.ebuild,v 1.5 2009/12/04 17:51:54 scarabeus Exp $
 
 EAPI="2"
 
@@ -31,7 +31,7 @@ COMMONDEPEND="
 	media-libs/giflib
 	media-libs/jpeg
 	media-libs/libpng
-	>=media-sound/phonon-4.4_pre[xcb]
+	>=media-sound/phonon-4.3.49[xcb]
 	sys-apps/dbus[X]
 	sys-libs/libutempter
 	sys-libs/zlib
