@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdelibs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.651 2009/12/02 22:06:18 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdelibs/ChangeLog,v 1.652 2009/12/04 17:51:54 scarabeus Exp $
+
+  04 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org>
+  kdelibs-4.3.1-r1.ebuild, kdelibs-4.3.1-r2.ebuild, kdelibs-4.3.3-r1.ebuild,
+  kdelibs-4.3.3-r2.ebuild, kdelibs-4.3.4.ebuild:
+  Depend on correct phonon version.
 
   02 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> kdelibs-4.3.4.ebuild:
   Fix elog information. Per bug #288502.
